--- a/css/styles.css
+++ b/css/styles.css
@@ -3,20 +3,47 @@ body {
   color: #434455;
   background-color: #ffffff;
 }
+h1,
+h2, h3, h4, h5, h6,p {
+  margin: 0;}
 a {
   text-decoration: none;
   color: currentColor
 }
 ul {
+  padding: 0;
+  margin: 0;
   list-style-type: none;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 .container {
-  width: 1440px;
+  width: 1158px;
   margin: 0 auto;
-
-  outline: 2px solid red;
+}
+.section {
+  padding: 120px 0;
 }
 /*#region header*/
+
+.header > .container {
+  display: flex;
+  
+  
+  /* justify-content: space-between; */
+  align-items: center;
+  border-bottom: 1px solid #E7E9FC;
+}
+.navy {
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-between;
+  align-items: center;
+
+}
 .logo {
   color: #4D5AE5;
   font-family: Raleway, sans-serif;
@@ -25,6 +52,7 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  /* margin-right: 76px; */
 }
 .logo-dark {
   color: #2E2F42;
@@ -36,6 +64,8 @@ ul {
 }
 
 .menu {
+  display: block;
+  padding: 24px 0;
   color: #2e2f42;
   font-weight: 500;
   font-size: 16px;
@@ -49,8 +79,22 @@ ul {
 .menu:active {
   color: #404bbf;
 }
+.menu-list {
+  display: flex;
+  gap: 40px;
+  margin-right: 332px;
+}
+
+.contacts-list {
+  display: flex;
+  gap: 40px;
+  margin-left: auto;
+  align-items: center;
+}
 
 .contacts{
+  display: block;
+  padding: 24px 0;
   color: #434455;
   font-style: normal;
   font-weight: 400;
@@ -66,6 +110,7 @@ ul {
 
 /*#region hero*/
 .hero{
+  display: flex;
   background-color: #2e2f42;
 }
 .hero-title {
@@ -80,6 +125,9 @@ ul {
   margin: 0 auto;
 }
 .hero-button {
+  display: block;
+  margin: 0 auto 188px auto;
+ /* margin-bottom: 188px; */
   background-color: #4d5ae5;
   color: #ffffff;
   font-weight: 500;
@@ -89,7 +137,6 @@ ul {
   letter-spacing: 0.04em;
   width: 169px;
   height: 59px;
-
 }
 .hero-button:hover {
   background-color: #404bbf;
@@ -100,6 +147,18 @@ ul {
 /*#endregion hero*/
 
 /*#region features*/
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .features{
   
 }
@@ -109,6 +168,7 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2E2F42;
+  margin-bottom: 8px;
 }
 .features-description {
   font-weight: 400;
@@ -119,13 +179,16 @@ ul {
 }
 .features-list {
   display: flex;
+  justify-content: space-between;
+  /* padding: 120px 0; */
+  gap: 24px;
 }
 .features-caption {
   margin-bottom: 8px;
 }
 .features-item {
   width: 264px;
-  margin-right: 24px;
+  /* margin-right: 24px; */
 }
 /*#endregion features*/
 
@@ -141,10 +204,17 @@ ul {
   letter-spacing: 0.02em;
   color: #2E2F42;
   text-align: center;
+  padding-bottom: 72px;
 }
-.team-item {
+.team-list {
+  display: flex;
+  justify-content: space-between;
+
+}.team-item {
   background-color: #ffffff;
 }
+
+
 .team-name {
   font-weight: 500;
   font-size: 20px;
@@ -152,6 +222,8 @@ ul {
   letter-spacing: 0.02em;
   color: #2E2F42;
   text-align: center;
+  padding-top: 32px;
+  padding-bottom: 8px;
 }
 .team-position {
   font-weight: 400;
@@ -160,17 +232,33 @@ ul {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+  padding-bottom: 32px;
 }
 /*#endregion team*/
 
 /*#region portfolio*/
+.portfolio-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 24px;
+}
+.portfolio-item {
+width: calc((100% - 24px*2) / 3);
+}
 .portfolio-title {
+  padding-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2E2F42;
   text-align: center;
+}
+.portfolio-wrapper {
+  border: 1px solid #E7E9FC;
+  border-top: none;
+  padding: 32px 16px;
 }
 .portfolio-caption {
   font-weight: 500;
@@ -192,11 +280,16 @@ ul {
 footer {
   background-color: #2E2F42;
 }
+footer .container{
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
 .footer-description {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  
 }
 /*#endregion footer*/
