--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ img {
 }
 .container {
   width: 1158px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 .section {
@@ -35,6 +36,9 @@ img {
   
   /* justify-content: space-between; */
   align-items: center;
+  
+}
+.header {
   border-bottom: 1px solid #E7E9FC;
 }
 .navy {
@@ -83,6 +87,7 @@ img {
   display: flex;
   gap: 40px;
   margin-right: 332px;
+  margin-left: 76px;
 }
 
 .contacts-list {
@@ -112,6 +117,9 @@ img {
 .hero{
   display: flex;
   background-color: #2e2f42;
+  padding-top: 188px;
+padding-bottom: 188px;
+  
 }
 .hero-title {
   color: #ffffff;
@@ -120,13 +128,14 @@ img {
   text-align: center;
   letter-spacing: 0.02em;
   width: 496px;
-  padding-top: 188px;
+  /* padding-top: 188px; */
   padding-bottom: 48px;
   margin: 0 auto;
 }
 .hero-button {
   display: block;
-  margin: 0 auto 188px auto;
+  /* margin: 0 auto 188px auto; */
+  margin: 0 auto;
  /* margin-bottom: 188px; */
   background-color: #4d5ae5;
   color: #ffffff;
@@ -135,8 +144,13 @@ img {
   line-height: 1.5;
   cursor: pointer;
   letter-spacing: 0.04em;
-  width: 169px;
-  height: 59px;
+  /* width: 169px;
+  height: 59px; */
+  padding: 16px 32px;
+  border-radius: 4px;
+
+
+  box-shadow: 0px 4px 4px 0px #00000026;
 }
 .hero-button:hover {
   background-color: #404bbf;
@@ -210,8 +224,14 @@ img {
   display: flex;
   justify-content: space-between;
 
-}.team-item {
+}
+.team-item {
   background-color: #ffffff;
+  width: 264px;
+  border-radius: 0px 0px 4px 4px;
+}
+.team-wrapper {
+ padding: 32px 16px;
 }
 
 
@@ -222,8 +242,8 @@ img {
   letter-spacing: 0.02em;
   color: #2E2F42;
   text-align: center;
-  padding-top: 32px;
-  padding-bottom: 8px;
+  /* padding-top: 32px;
+  padding-bottom: 8px; */
 }
 .team-position {
   font-weight: 400;
@@ -232,7 +252,7 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
-  padding-bottom: 32px;
+  /* padding-bottom: 32px; */
 }
 /*#endregion team*/
 
@@ -241,10 +261,12 @@ img {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 24px;
+  row-gap: 48px;
+  column-gap: 24px;
 }
 .portfolio-item {
-width: calc((100% - 24px*2) / 3);
+width: calc((100% - 48px) / 3);
+
 }
 .portfolio-title {
   padding-bottom: 72px;
@@ -280,7 +302,7 @@ width: calc((100% - 24px*2) / 3);
 footer {
   background-color: #2E2F42;
 }
-footer .container{
+footer {
   padding-top: 100px;
   padding-bottom: 100px;
 }
